Arrumei o background/posiçoes das pastas

--- a/scss/others/page.scss
+++ b/scss/others/page.scss
@@ -3,7 +3,7 @@
   padding: 0;
 }
 body {
-  background: url(../../assets/backgroundLp.png);
+  background-image: url('../others/img/backgroundLp.png');
   background-repeat: no-repeat;
   background-position: right;
   background-size: cover;
