--- a/scss/css/style.css
+++ b/scss/css/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  background: url(../../assets/backgroundLp.png);
+  background-image: url("../others/img/backgroundLp.png");
   background-repeat: no-repeat;
   background-position: right;
   background-size: cover;
