--- a/scss/others/page.scss
+++ b/scss/others/page.scss
@@ -9,13 +9,19 @@ body {
   background-size: cover;
 
   div {
-    color: white;
+    color: #ccc;
   }
 
   .container1 {
     background-color: $background-color;
     width: 28rem;
     height: auto;
+    border-radius: 0.25rem;
+    box-shadow: 0px 0px 10px #000;
+    ::selection {
+      background-color: $button-color;
+      color: #ccc;
+    }
 
     .topLogo {
       width: 180px;
@@ -31,7 +37,34 @@ body {
 
       &:hover {
         background-color: $button-color;
-        color: white;
+        color: #ccc;
+      }
+    }
+    .form-control {
+      border-color: transparent;
+      background-color: transparent;
+      color: $button-color;
+      caret-color: $button-color;
+      &:focus {
+        box-shadow: 0 0 0 0.2rem transparent;
+        border: 1px solid $button-color;
+      }
+    }
+
+    .input-group-text {
+      border: 1px solid $button-color;
+      background-color: transparent;
+      color: #ccc;
+    }
+    .form-check-input {
+      background-color: transparent;
+      border: 1px solid $button-color;
+      &:checked {
+        background-color: $button-color;
+        border-color: $button-color;
+      }
+      &:focus {
+        box-shadow: 0 0 0 0.25rem rgba(255, 255, 255, 0);
       }
     }
   }
